--- a/core/pom.xml
+++ b/core/pom.xml
@@ -98,5 +98,11 @@
             <groupId>junit-addons</groupId>
             <artifactId>junit-addons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-api</artifactId>
+            <version>2.16.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
